--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Website</h1>
-    </header>
-    <section>
-        <h2>About Me</h2>
-        <p>Hello, I'm [Your Name]. I love [your interests].</p>
-    </section>
-    <section>
-        <h2>My Work</h2>
-        <p>Check out my projects and creations:</p>
-        <ul>
-            <li><a href="#">Project 1</a></li>
-            <li><a href="#">Project 2</a></li>
-            <!-- Add more projects as needed -->
-        </ul>
-    </section>
-    <footer>
-        <p>Contact me at [your email address]</p>
-    </footer>
-</body>
-</html>
+<p>Hello 大家好</p>
+<p>我是霸都丶傲天，这是我的个人网站。 </p>
+<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+
+<ul>
+  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
+  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
+</ul>
